it-learn/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-learn-backend
  namespace: e-learn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: e-learn
  template:
    metadata:
      labels:
        app: e-learn
    spec:
      containers:
      - name: app
        image: it-learn-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /healthcheck
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 5000
          initialDelaySeconds: 90
          periodSeconds: 20
          timeoutSeconds: 10
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
