it-learn/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-learn-service
  namespace: e-learn
spec:
  selector:
    app: e-learn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 10000
  type: ClusterIP
